Updated examples