@@ -9,19 +9,32 @@
     <artifactId>ban-bot</artifactId>
     <version>1.0-SNAPSHOT</version>
 
-    <!-- Sets the version of the project to JDK 16 -->
     <properties>
-        <maven.compiler.source>16</maven.compiler.source>
-        <maven.compiler.target>16</maven.compiler.target>
-        <whatsapp4j-version>2.0-SNAPSHOT</whatsapp4j-version>
+        <java.version>16</java.version>
+        <whatsapp4j.version>2.2-SNAPSHOT</whatsapp4j.version>
     </properties>
 
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.8.1</version>
+                <configuration>
+                    <source>${java.version}</source>
+                    <target>${java.version}</target>
+                    <release>${java.version}</release>
+                    <compilerArgument>--enable-preview</compilerArgument>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
+
     <dependencies>
-        <!-- Adds WhatsappWeb4j as a dependency-->
         <dependency>
             <groupId>com.github.auties00</groupId>
             <artifactId>whatsappweb4j</artifactId>
-            <version>${whatsapp4j-version}</version>
+            <version>${whatsapp4j.version}</version>
         </dependency>
     </dependencies>
 </project>
